--- a/01-Examen/app/src/main/AndroidManifest.xml
+++ b/01-Examen/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.movilessoftware2021aejercicio1">
+    package="com.example.examen01_lopezdiana">
 
     <application
         android:allowBackup="true"
@@ -8,19 +8,12 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.MovilesSoftware2021AEjercicio1">
-        <activity android:name=".GRecyclerView"></activity>
-        <activity android:name=".CIntentExplicitoParametros" />
-        <activity android:name=".BListView">
-            <intent-filter>
-                <action android:name="android.intent.action.SEND" />
-
-                <category android:name="android.intent.category.DEFAULT" />
-
-                <data android:mimeType="text/plain" />
-            </intent-filter>
-        </activity>
-        <activity android:name=".ACicloVida" />
+        android:theme="@style/Theme.Examen01LopezDiana">
+        <activity android:name=".CrearPapeleria"></activity>
+        <activity android:name=".CrearArticulos" />
+        <activity android:name=".VisualizarArticulosPorPapeleria" />
+        <activity android:name=".ActualizarArticulo" />
+        <activity android:name=".ActualizarPapeleria" />
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
