--- a/02-Android/app/src/main/AndroidManifest.xml
+++ b/02-Android/app/src/main/AndroidManifest.xml
@@ -2,6 +2,10 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.movilessoftware2021aejercicio1">
 
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -9,7 +13,12 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.MovilesSoftware2021AEjercicio1">
-        <activity android:name=".GRecyclerView"></activity>
+        <activity
+            android:name=".borrar"
+            android:label="@string/title_activity_borrar"
+            android:theme="@style/Theme.MovilesSoftware2021AEjercicio1.NoActionBar"></activity>
+        <activity android:name=".HHttpActivity" />
+        <activity android:name=".GRecyclerView" />
         <activity android:name=".CIntentExplicitoParametros" />
         <activity android:name=".BListView">
             <intent-filter>
