--- a/02-firebase/app/src/main/AndroidManifest.xml
+++ b/02-firebase/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.firebaseuno">
+    package="com.example.firebaseuno" >
 
     <application
         android:allowBackup="true"
@@ -8,19 +8,25 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.FirebaseUno">
+        android:theme="@style/Theme.FirebaseUno" >
         <activity
-            android:name=".EOrdenes"
+            android:name=".GVisualizarOrdenes"
             android:exported="true" />
         <activity
-            android:name=".DRestaurante"
+            android:name=".FGestionOrdenes"
             android:exported="true" />
         <activity
-            android:name=".CProducto"
+            android:name=".ECrearOrdenes"
+            android:exported="true" />
+        <activity
+            android:name=".DCrearRestaurante"
+            android:exported="true" />
+        <activity
+            android:name=".CCrearProducto"
             android:exported="true" />
         <activity
             android:name=".MainActivity"
-            android:exported="true">
+            android:exported="true" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
